--- a/SmartGel/view/SGTagCollectionViewCell.xib
+++ b/SmartGel/view/SGTagCollectionViewCell.xib
@@ -79,6 +79,7 @@
             <size key="customSize" width="220" height="195"/>
             <connections>
                 <outlet property="addPictureButton" destination="v1I-ck-PK0" id="QLi-9x-hgd"/>
+                <outlet property="maskView" destination="Tpt-kI-mcj" id="kRb-vH-tEo"/>
                 <outlet property="selectImageView" destination="gYg-GU-LfA" id="KRJ-wU-bXA"/>
                 <outlet property="tagImageView" destination="SzI-6h-RbM" id="PIy-cy-bxo"/>
                 <outlet property="tagLabel" destination="Oyk-cG-tke" id="vqo-qK-bd0"/>
